ViewBox changed, menu component added to the firts row in the desktop header, icons and text align with correct space in second row of the header

--- a/minimum-boilerplate-theme/styles/css/header/vtex.flex-layout.css
+++ b/minimum-boilerplate-theme/styles/css/header/vtex.flex-layout.css
@@ -2,10 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 87px;
+    height: 47px;
     /* margin-right: 20px;
     margin-bottom: 10px; */
 }
 
-.flexColChild--menu_icon_text_column--text {
-    max-height: 20px;
-}
+/* .menu_icon_text_column--text .svg {
+    height: 20px;
+    width: 20px;
+} */
