--- a/minimum-boilerplate-theme/styles/css/header/vtex.rich-text.css
+++ b/minimum-boilerplate-theme/styles/css/header/vtex.rich-text.css
@@ -2,4 +2,5 @@
     font-weight: 300;
     font-size: 12px;
     line-height: 15px;
+    margin: 0;
 }
