--- a/minimum-boilerplate-theme/styles/css/home/vtex.product-price.css
+++ b/minimum-boilerplate-theme/styles/css/home/vtex.product-price.css
@@ -9,7 +9,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 35% !important;
+    width: 45% !important;
     /* padding-top: 4px; */
     align-content: center;
 }
