--- a/minimum-boilerplate-theme/styles/css/vtex.store-components.css
+++ b/minimum-boilerplate-theme/styles/css/vtex.store-components.css
@@ -59,17 +59,6 @@
    height: 336.46px;
 
 }
-
-/* 
-Header styles
-*/
-
-.headerRowContentContainer--header_two_row_mobile--text {
-   overflow-x: scroll;
-   width: 100vw;
-   overflow-y: hidden;
-}
-
 /* @media screen and (max-width:1024px) {
    .imageElement--info-card-banner {
       width: 100%;
